--- a/CalendarMobile/app/src/main/res/values/strings.xml
+++ b/CalendarMobile/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">CalendarMobile</string>
+    <string name="app_name">Calendar Mobile App</string>
 </resources>
